--- a/Jungnami/Jungnami/SJ/Storyboard/Sub.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Sub.storyboard
@@ -49,14 +49,14 @@
                                             <color key="titleColor" red="0.81568627449999997" green="0.81568627449999997" blue="0.82352941180000006" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                     </button>
-                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" image="community_bell_blue_circle" translatesAutoresizingMaskIntoConstraints="NO" id="rvw-PE-ARH">
+                                    <imageView hidden="YES" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" image="community_bell_blue_circle" translatesAutoresizingMaskIntoConstraints="NO" id="rvw-PE-ARH">
                                         <rect key="frame" x="332" y="8.5" width="16" height="16"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="16" id="n75-dI-qZ0"/>
                                             <constraint firstAttribute="width" secondItem="rvw-PE-ARH" secondAttribute="height" multiplier="1:1" id="rGw-C6-di2"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="33" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jwt-bn-QBi">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jwt-bn-QBi">
                                         <rect key="frame" x="332" y="8.5" width="16" height="16"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="9"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -216,8 +216,10 @@
                         <outlet property="alarmBtn" destination="qff-L1-uQG" id="lJL-78-fC3"/>
                         <outlet property="alarmCountLbl" destination="Jwt-bn-QBi" id="6nr-2Z-PHX"/>
                         <outlet property="contentContainerView" destination="c1g-yO-Cj2" id="mLI-yg-ERI"/>
+                        <outlet property="menuBarView" destination="seo-7A-Lx1" id="ef8-hm-cVx"/>
                         <outlet property="recommendBlueBar" destination="T7Q-sJ-Ay7" id="KfF-q7-lIY"/>
                         <outlet property="recommendBtn" destination="1cb-d4-bPZ" id="oDR-J7-rJs"/>
+                        <outlet property="searchTxtField" destination="klQ-Im-7bM" id="shS-pM-pEN"/>
                         <outlet property="storyBlueBar" destination="lov-vD-UxQ" id="kS7-TP-Psh"/>
                         <outlet property="storyBtn" destination="CLF-zc-Q9Q" id="m43-jZ-K08"/>
                         <outlet property="tmiBlueBar" destination="Ipu-ds-e6h" id="8SF-eU-pxq"/>
@@ -753,7 +755,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EgO-bT-JhE">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EgO-bT-JhE">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="9My-Vw-qsW" userLabel="navBar">
@@ -844,7 +846,7 @@
                                                 <constraint firstItem="Zrz-uG-R7Y" firstAttribute="top" secondItem="eUV-ds-nwI" secondAttribute="top" constant="19" id="wpY-Ir-Urc"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                                         <connections>
                                             <outlet property="followBtn" destination="qxM-lM-zCj" id="4ft-gh-NcA"/>
                                             <outlet property="noticeDateLbl" destination="KdW-7p-fLB" id="xlS-IR-Ifr"/>
